--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Karbar - Multipurpose Bootstrap 4 Template</title>
+    <title>Nulytics - Digital Marketing, POS System, Web Development, E-commerce</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
