home page, service links plotted

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 ideation → project progression → validation of your passion.
                                     </p>
                                     <a href="about-us.html" class="cr-btn cr-btn-lg cr-btn-round">
-                                        <span>Know More</span>
+                                        <span>More About Us</span>
                                     </a>
                                 </div>
                             </div>
@@ -245,16 +245,17 @@ ideation → project progression → validation of your passion.
                             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                                 <div class="service service-style-5">
                                     <div class="service-image">
-                                        <img src="images/service/service-thumb-4.jpg" alt="Service Thumb">
+                                        <a href="digital-marketing.html">
+                                        <img src="images/service/dmhome.jpg" alt="Service Thumb">
+                                        </a>
                                     </div>
                                     <div class="service-content">
                                         <h4>
-                                            <a href="service-details.html">Digital Marketing</a>
+                                            <a href="digital-marketing.html">Digital Marketing</a>
                                         </h4>
-                                        <p>There are many variations of passages Lorem Ipsum, but the majority variations of
-                                            passages of Lorem Ipsum
+                                        <p>Digital Marketing is a core component of an expanding business. Can your online business grow just by using a state-of-the-art expensive platform?..
                                         </p>
-                                        <a href="service-details.html" class="cr-readmore2">Read More</a>
+                                        <a href="digital-marketing.html" class="cr-readmore2">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -264,16 +265,17 @@ ideation → project progression → validation of your passion.
                             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                                 <div class="service service-style-5">
                                     <div class="service-image">
-                                        <img src="images/service/service-thumb-5.jpg" alt="Service Thumb">
+                                        <a href="website-development.html">
+                                        <img src="images/service/webhome.jpg" alt="Service Thumb">
+                                        </a>
                                     </div>
                                     <div class="service-content">
                                         <h4>
-                                            <a href="service-details.html">Website Development</a>
+                                            <a href="website-development.html">Website Development</a>
                                         </h4>
-                                        <p>There are many variations of passages Lorem Ipsum, but the majority variations of
-                                            passages of Lorem Ipsum
+                                        <p>Anybody can make websites. But your business is more than a pretty logo. Your story is uniquely yours - what inspired you to start this venture, what are your company’s vision and goals?..
                                         </p>
-                                        <a href="service-details.html" class="cr-readmore2">Read More</a>
+                                        <a href="website-development.html" class="cr-readmore2">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -283,16 +285,17 @@ ideation → project progression → validation of your passion.
                             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                                 <div class="service service-style-5">
                                     <div class="service-image">
-                                        <img src="images/service/service-thumb-6.jpg" alt="Service Thumb">
+                                        <a href="ecommerce-solution.html">
+                                        <img src="images/service/ecomhome.jpg" alt="Service Thumb">
+                                        </a>
                                     </div>
                                     <div class="service-content">
                                         <h4>
-                                            <a href="service-details.html">E-commerce Solution</a>
+                                            <a href="ecommerce-solution.html">E-commerce Solution</a>
                                         </h4>
-                                        <p>There are many variations of passages Lorem Ipsum, but the majority variations of
-                                            passages of Lorem Ipsum
+                                        <p>You online store is open 24/7/365. Selling online to a digital consumer (B2C or B2B) requires familiarity with e-commerce best practices...
                                         </p>
-                                        <a href="service-details.html" class="cr-readmore2">Read More</a>
+                                        <a href="ecommerce-solution.html" class="cr-readmore2">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -302,16 +305,17 @@ ideation → project progression → validation of your passion.
                             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                                 <div class="service service-style-5">
                                     <div class="service-image">
-                                        <img src="images/service/service-thumb-6.jpg" alt="Service Thumb">
+                                        <a href="mobile-apps.html">
+                                        <img src="images/service/mobileapps.jpg" alt="Service Thumb">
+                                        </a>
                                     </div>
                                     <div class="service-content">
                                         <h4>
-                                            <a href="service-details.html">Mobile Apps</a>
+                                            <a href="mobile-apps.html">Mobile Apps</a>
                                         </h4>
-                                        <p>There are many variations of passages Lorem Ipsum, but the majority variations of
-                                            passages of Lorem Ipsum
+                                        <p>Use smartphone apps to leverage technology and increase client base. We have our smartphone app development team ready to support your systems and services...
                                         </p>
-                                        <a href="service-details.html" class="cr-readmore2">Read More</a>
+                                        <a href="mobile-apps.html" class="cr-readmore2">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -321,16 +325,15 @@ ideation → project progression → validation of your passion.
                             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                                 <div class="service service-style-5">
                                     <div class="service-image">
-                                        <img src="images/service/service-thumb-6.jpg" alt="Service Thumb">
+                                        <img src="images/service/hardware.jpg" alt="Service Thumb">
                                     </div>
                                     <div class="service-content">
                                         <h4>
-                                            <a href="service-details.html">Hardware & IT Support</a>
+                                            <a href="hardware-and-it-support.html">Hardware & IT Support</a>
                                         </h4>
-                                        <p>There are many variations of passages Lorem Ipsum, but the majority variations of
-                                            passages of Lorem Ipsum
+                                        <p>We provide all kind of POS solution required Hardware such as Desktop Computer, Laptop, Barcode scanner, Barcode Printer, POS Printer, Laser Printer...
                                         </p>
-                                        <a href="service-details.html" class="cr-readmore2">Read More</a>
+                                        <a href="hardware-and-it-support.html" class="cr-readmore2">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -340,16 +343,17 @@ ideation → project progression → validation of your passion.
                             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                                 <div class="service service-style-5">
                                     <div class="service-image">
-                                        <img src="images/service/service-thumb-6.jpg" alt="Service Thumb">
+                                        <a href="motion-graphics.html">
+                                        <img src="images/service/motiongraphics.jpg" alt="Service Thumb">
+                                        </a>
                                     </div>
                                     <div class="service-content">
                                         <h4>
-                                            <a href="service-details.html">Motion Graphics</a>
+                                            <a href="motion-graphics.html">Motion Graphics</a>
                                         </h4>
-                                        <p>There are many variations of passages Lorem Ipsum, but the majority variations of
-                                            passages of Lorem Ipsum
+                                        <p>Consumers like visuals. Storytelling with visuals grabs the attention of people. Get ahead of competition by using the skills of our Motion Graphics team...
                                         </p>
-                                        <a href="service-details.html" class="cr-readmore2">Read More</a>
+                                        <a href="motion-graphics.html" class="cr-readmore2">Read More</a>
                                     </div>
                                 </div>
                             </div>
@@ -366,23 +370,24 @@ ideation → project progression → validation of your passion.
                         <div class="row align-items-center">
                             <div class="col-xl-5 col-lg-12 order-2 order-xl-1">
                                 <div class="about-content">
-                                    <h2>Fully Responsive</h2>
-                                    <p>There are many variations of passages Lorem Ipsum, but the majority variation passages
-                                        Lorem Ipsum, but the There are many variations of passages Lorem Ipsum</p>
-                                    <a href="about-us.html" class="cr-btn cr-btn-round cr-btn-lg">
+                                    <h2>Clients Choice </h2>
+                                    <h4>Cupcake POS</h4>
+                                    <p>A restaurant management software that enables restaurant owners and employees to manage all of their business activities. It is a comprehensive platform with industry-standard feature sets and excellent user experience.</p>
+                                    <a href="cupcake.html" class="cr-btn cr-btn-round cr-btn-lg">
                                         <span>Know More</span>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-xl-7 col-lg-12 order-1 order-xl-2">
-                                <div class="video-box ml-0 ml-xl-5" data-tilt>
+                                <!-- <div class="video-box ml-0 ml-xl-5" data-tilt>
                                     <div class="video-box-thumb">
                                         <img src="images/video-thumbs/video-thumb-1.jpg" alt="video-thumb">
                                     </div>
-                                    <a href="https://www.youtube.com/watch?v=dk9uNWPP7EA" class="play-button">
+                                    <a href="https://youtu.be/bR6ZUqXSVC4" class="play-button">
                                         <i class="flaticon-play-button"></i>
                                     </a>
-                                </div>
+                                </div> -->
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/bR6ZUqXSVC4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
@@ -857,12 +862,7 @@ ideation → project progression → validation of your passion.
                                             <li>
                                                 <a href="contact-us.html">Quick Contact</a>
                                             </li>
-                                            <li>
-                                                <a href="about-us-2.html">Karbar History</a>
-                                            </li>
-                                            <li>
-                                                <a href="services.html">Our Services</a>
-                                            </li>
+                                            
                                         </ul>
                                     </div>
                                     <!--// Single Widget -->
