--- a/website-development.html
+++ b/website-development.html
@@ -132,7 +132,7 @@
 
            
             <!-- Breacrumb Area -->
-        <div class="breadcrumb-area" data-black-overlay="7">
+        <div class="breadcrumb-area-web" data-black-overlay="7">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
@@ -160,7 +160,7 @@
                         </div>
                         <div class="col-lg-7">
                             <div class="pg-service-thumbs">
-                                <img src="images/service/service-details/service-details-1.jpg" alt="service thumb">
+                                <img src="images/service/website-branding.jpg" alt="service thumb">
                             </div>
                         </div>
                         <div class="col-lg-5">
