service templates ready

--- a/faq.html
+++ b/faq.html
@@ -133,12 +133,12 @@
          <!-- Put Body Content Here-->
 
          <!-- Breacrumb Area -->
-        <div class="breadcrumb-area" data-black-overlay="7">
+        <div class="breadcrumb-area-faq" data-black-overlay="7">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
                         <div class="cr-breadcrumb text-center">
-                            <h1>Faq</h1>
+                            <h1>FAQ</h1>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                                 alteration passages of Lorem Ipsum available, but the majority</p>
                         </div>
