--- a/index.html
+++ b/index.html
@@ -325,7 +325,9 @@ ideation → project progression → validation of your passion.
                             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
                                 <div class="service service-style-5">
                                     <div class="service-image">
+                                        <a href="hardware-and-it-support.html">
                                         <img src="images/service/hardware.jpg" alt="Service Thumb">
+                                        </a>
                                     </div>
                                     <div class="service-content">
                                         <h4>
