--- a/index.html
+++ b/index.html
@@ -793,24 +793,25 @@ ideation → project progression → validation of your passion.
                 </section>
                 <!--// Testimonial Area -->
 
-                <!-- Call To Action Area -->
-                <section class="callto-action-area bg-theme">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-10 offset-xl-1 col-12 offset-0">
-                                <div class="callto-action">
-                                    <div class="callto-action-inner">
-                                        <h2>To start your project with us</h2>
-                                        <a href="#" class="cr-btn cr-btn-white">
-                                            <span>Purchase Now</span>
-                                        </a>
-                                    </div>
+               
+             <!-- Call To Action Area -->
+            <section class="callto-action-area bg-theme">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-10 offset-xl-1 col-12 offset-0">
+                            <div class="callto-action">
+                                <div class="callto-action-inner">
+                                    <h2>Work with our amazing team!</h2>
+                                    <a href="contact-us.html" class="cr-btn cr-btn-white">
+                                        <span>Get In Touch</span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </section>
-                <!--// Call To Action Area -->
+                </div>
+            </section>
+            <!--// Call To Action Area -->
 
             </main>
             <!-- //Page Content -->
